# esp32c6-zigbee-temperature-sensor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
